# rust-sort

./: Cargo.toml  README.md
src/: lib.rs  main.rs  simple.rs  sort_evaluator.rs  sorter.rs
src/sorts/: bubble_sort.rs  bubblesort.rs  gnome_sort.rs  insertion_sort.rs  insertionsort.rs  merge_sort.rs  mod.rs  quick_sort.rs  quicksort.rs  selectionsort.rs  sorting_algorithm.rs
