[package]
name = "sorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "sorter"

[[bin]]
path = "src/main.rs"
name = "sorter"


[dependencies]
rand = "0.8.5"
thiserror = "1.0.43"
anyhow = "1.0.72"
